--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WordCounter</string>
+    <string name="type_text_here">Type text here</string>
+    <string name="word_count_button">Word Count</string>
+    <string name="word_count" />
 </resources>
