Added a words occurence function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="type_text_here">Type text here</string>
     <string name="word_count_button">Word Count</string>
     <string name="word_count" />
+    <string name="word_occurrence">Word Occurrence</string>
 </resources>
